--- a/app/src/main/res/layout/activity_diebold__call__in.xml
+++ b/app/src/main/res/layout/activity_diebold__call__in.xml
@@ -32,7 +32,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Diebold"
+            android:hint="@string/num_diebold"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -56,7 +56,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:ems="10"
-            android:hint="Desjardins"
+            android:hint="@string/num_desj"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -80,7 +80,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:focusableInTouchMode="false"
-            android:hint="Heure"
+            android:hint="@string/heure"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="@+id/editText4"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -103,7 +103,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Heure"
+            android:hint="@string/heure"
             android:inputType="textPersonName"
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/editText2" />
@@ -126,7 +126,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Heure"
+            android:hint="@string/heure"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/editText3"
             app:layout_constraintHorizontal_bias="0.0"
@@ -140,7 +140,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Heure"
+            android:hint="@string/heure"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/editText4"
             app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -172,7 +172,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Établissement"
+            android:hint="@string/nom_eta"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -195,7 +195,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Tech"
+            android:hint="@string/nom_tech"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -218,7 +218,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Module"
+            android:hint="@string/module"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -242,6 +242,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
+            android:hint="@string/travail"
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView11"
