--- a/app/src/main/res/layout/activity_diebold__call__in.xml
+++ b/app/src/main/res/layout/activity_diebold__call__in.xml
@@ -37,9 +37,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="@string/num_diebold"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -61,9 +63,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="@string/num_desj"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -84,10 +88,12 @@
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:focusableInTouchMode="false"
             android:hint="@string/heure"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/heureDebut"
             app:layout_constraintStart_toEndOf="@+id/textView4"
             app:layout_constraintTop_toBottomOf="@+id/numDesj"
@@ -104,14 +110,18 @@
 
         <EditText
             android:id="@+id/heureDebut"
-            android:layout_width="111dp"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:focusableInTouchMode="false"
+            android:background="@drawable/shape"
             android:ems="10"
+            android:focusableInTouchMode="false"
             android:hint="@string/heure"
             android:inputType="textPersonName"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/numDesj" />
 
@@ -132,10 +142,12 @@
             android:layout_width="105dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
-            android:hint="@string/heure"
             android:focusableInTouchMode="false"
+            android:hint="@string/heure"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="@+id/heureDepart"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/heureDepart"
@@ -143,16 +155,17 @@
 
         <EditText
             android:id="@+id/heureRetour"
-            android:layout_width="112dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
-            android:hint="@string/heure"
             android:focusableInTouchMode="false"
+            android:hint="@string/heure"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="@+id/heureDebut"
-            app:layout_constraintStart_toEndOf="@+id/textView7"
+            app:layout_constraintStart_toStartOf="@+id/heureDebut"
             app:layout_constraintTop_toBottomOf="@+id/heureDebut" />
 
         <TextView
@@ -180,9 +193,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="@string/nom_eta"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView8"
             app:layout_constraintTop_toBottomOf="@+id/nomTech" />
@@ -203,9 +218,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="@string/nom_tech"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView9"
             app:layout_constraintTop_toTopOf="parent" />
@@ -226,9 +243,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="@string/module"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView10"
             app:layout_constraintTop_toBottomOf="@+id/heureFin" />
@@ -250,6 +269,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="@string/travail"
             android:inputType="textMultiLine"
@@ -263,8 +283,9 @@
             android:layout_height="27dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
+            android:background="@drawable/shape"
             android:layout_marginTop="24dp"
-            android:background="@android:color/darker_gray"
+
             android:entries="@array/type_fermeture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -305,9 +326,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="Pièce #1"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -319,9 +342,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="Pièce #2"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textPiece1" />
@@ -333,9 +358,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/shape"
             android:ems="10"
             android:hint="Pièce #3"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textPiece2" />
