--- a/app/src/main/res/layout/activity_diebold__call__in.xml
+++ b/app/src/main/res/layout/activity_diebold__call__in.xml
@@ -27,11 +27,11 @@
             android:layout_height="29dp"
             android:layout_marginStart="16dp"
             android:text="# Diebold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/numDiebold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/numMultitech"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/numDiebold"
+            android:id="@+id/numMultitech"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
@@ -53,11 +53,11 @@
             android:layout_height="26dp"
             android:layout_marginStart="16dp"
             android:text="# Desjardins"
-            app:layout_constraintBaseline_toBaselineOf="@+id/numDesj"
+            app:layout_constraintBaseline_toBaselineOf="@+id/numIngenico"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/numDesj"
+            android:id="@+id/numIngenico"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
@@ -71,7 +71,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/numDiebold" />
+            app:layout_constraintTop_toBottomOf="@+id/numMultitech" />
 
         <TextView
             android:id="@+id/textView4"
@@ -392,7 +392,7 @@
             android:inputType="textPersonName"
             android:text="Name"
             app:layout_constraintStart_toEndOf="@+id/textView12"
-            app:layout_constraintTop_toBottomOf="@+id/numDesj" />
+            app:layout_constraintTop_toBottomOf="@+id/numIngenico" />
 
         <CheckBox
             android:id="@+id/checkBox"
@@ -402,7 +402,7 @@
             android:layout_marginTop="16dp"
             android:text="Vérifier charte?"
             app:layout_constraintStart_toEndOf="@+id/editText"
-            app:layout_constraintTop_toBottomOf="@+id/numDesj" />
+            app:layout_constraintTop_toBottomOf="@+id/numIngenico" />
 
         <CheckBox
             android:id="@+id/checkBox2"
