--- a/app/src/main/res/layout/activity_multitech__call__in.xml
+++ b/app/src/main/res/layout/activity_multitech__call__in.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingTop="20dp"
-    android:paddingBottom="300dp"
-    android:clipToPadding="false"
     android:alwaysRetainTaskState="true"
-    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
+    android:clipToPadding="false"
+    android:fillViewport="true"
+    android:paddingBottom="300dp"
+    android:paddingTop="20dp"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,12 +23,12 @@
             android:layout_width="87dp"
             android:layout_height="29dp"
             android:layout_marginStart="16dp"
-            android:text="# Diebold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/numDiebold"
+            android:text="# Multitech"
+            app:layout_constraintBaseline_toBaselineOf="@+id/numMultitech"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/numDiebold"
+            android:id="@+id/numMultitech"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
@@ -50,12 +49,12 @@
             android:layout_width="85dp"
             android:layout_height="26dp"
             android:layout_marginStart="16dp"
-            android:text="# Desjardins"
-            app:layout_constraintBaseline_toBaselineOf="@+id/numDesj"
+            android:text="# Ingenico"
+            app:layout_constraintBaseline_toBaselineOf="@+id/numIngenico"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/numDesj"
+            android:id="@+id/numIngenico"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
@@ -69,7 +68,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/numDiebold" />
+            app:layout_constraintTop_toBottomOf="@+id/numMultitech" />
 
         <TextView
             android:id="@+id/textView4"
@@ -93,7 +92,7 @@
             android:inputType="textPersonName"
             android:textAlignment="center"
             app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/numDesj" />
+            app:layout_constraintTop_toBottomOf="@+id/numIngenico" />
 
         <TextView
             android:id="@+id/textView5"
@@ -274,14 +273,14 @@
             android:layout_height="27dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:background="@drawable/shape"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
 
+            android:background="@drawable/shape"
             android:entries="@array/type_fermeture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textPiece3"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
             tools:textAlignment="center" />
 
         <Button
@@ -290,7 +289,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:onClick="sendEmail"
             android:text="Envoyer Diebold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -310,66 +309,42 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textTravail" />
 
-        <EditText
-            android:id="@+id/textPiece1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Pièce #1"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
-
-        <EditText
-            android:id="@+id/textPiece2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Pièce #2"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textPiece1" />
-
-        <EditText
-            android:id="@+id/textPiece3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Pièce #3"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textPiece2" />
-
         <Button
             android:id="@+id/buttonEnvoyerDesj"
             android:layout_width="0dp"
             android:layout_height="47dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:onClick="sendEmailDesj"
             android:text="Envoyer Desjardins"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonEnvoyer" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="0dp"
+            android:layout_height="206dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Ajouter pièce"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
