Test multitech - non fonctionnel

--- a/app/src/main/res/layout/activity_multitech__call__in.xml
+++ b/app/src/main/res/layout/activity_multitech__call__in.xml
@@ -343,8 +343,9 @@
             android:layout_marginTop="8dp"
             android:text="Ajouter pièce"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+            app:layout_constraintTop_toBottomOf="@+id/recycler" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
