--- a/app/src/main/res/layout/activity_multitech_piece.xml
+++ b/app/src/main/res/layout/activity_multitech_piece.xml
@@ -111,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
+        android:onClick="boutCancel"
         android:text="Cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textMarchand" />
